# Fade

./: .gitignore  Cargo.toml  Makefile  README.md  README_MSP_CONFIG.md  dashboard.css  listener.py  memory.f722.x  memory.h743.x  memory.x  msp_client.py  msp_config_test.py  msp_dashboard.py  pluged.txt  test_msp.py  write_pid.py
.cargo/: config.toml
docs/: FSP.md
src/: board_config.rs  config.rs  dshot.rs  filters.rs  flash.rs  flight_control.rs  fsp.rs  gyro.rs  led.rs  lib.rs  main.rs  mixer.rs  msp.rs  ngchl2.rs  pid.rs  usb.rs  w25q.rs
tests/: integration.rs
