[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Adam Ragac <drumer.ragi420@gmail.com>"]
name = "fade"
edition = "2021"
version = "0.1.0"

# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
[[bin]]
name = "main"
test = false

[lib]
harness = false

[features]

default = ["stm32h7"]

stm32f = ["embassy-stm32/stm32f722ic"]
stm32h7 = ["embassy-stm32/stm32h743ag"]

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt", "time-driver-any", "exti", "memory-x", "unstable-pac"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
static_cell = "2.1.0"
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embedded-hal-async = "1.0.0"
heapless = "0.7"
icm426xx = { git = "https://github.com/FADAMIS/icm426xx.git", features = ["async"] }
micromath = "2.1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
crsf = "2.0.1"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
